# chronicler-examples

./: .gitignore  README.md
ansible-dates/: date-operations.yml  hosts.yml
ansible-dynamic-inventory/: dynamic-play.yml  randomgroup.sh
ansible-logs/: ansible-logs.yml  hosts.yml
ansible-yaml-json/: README.md  process-data.yml  shell-output.sh
autmate-repositories/: mass-git-ops.sh
automate-repositories/: mass-git-ops.sh
email-format/: create-html-email.yml
email-format/templates/: mail_body.html.j2
flask-with-clerk/: .gitignore  README.md  main.py  pyproject.toml
flask-with-clerk/static/css/: styles.css
flask-with-clerk/templates/: footer.html  header.html  index.html  plans.html  profile.html
get-certificate/: README.md  get-cert.sh
gpt4-node-snippet/: comp-response.json  ghost-sign.js  gpt4-custom.js  webhook
multi-platform/: Dockerfile
multi-platform/devops-tools/: Dockerfile
pandoc/: README.md  print-my-document.md  print-my-documents.md
tls-ciphers-check/: cipher-check.py  ciphers.csv
wiki-report/: README.md  hosts.yml  oci-instance-report.yml
wiki-report/templates/: Home.md.j2  instance.md.j2
xml-documents-and-ansible/: README.md  oam-config.xml  oam-version-inc.yml
